<resources>
    <string name="app_name">Bidit</string>

    <string name="title_recent_search_keyword">최근 검색어</string>
    <string name="title_filter">필터</string>
    <string name="title_trade_type">거래 방법</string>
    <string name="title_using_time">사용기간</string>
    <string name="title_immediate_purchase_price">즉시구매가</string>
    <string name="title_start_price">시작가</string>
    <string name="title_current_price">현재가</string>
    <string name="title_deadline_time">마감 시간</string>
    <string name="title_current_bidding_people_count">참여자 수</string>
    <string name="title_remaining_time">잔여 시간</string>
    <string name="title_write_time">작성일</string>
    <string name="title_dialog_delete_board">판매글을 삭제하시겠어요?</string>
    <string name="title_recent_search_item">최근 검색 제품</string>
    <string name="title_selling_post_temporary">임시저장된 글이 있어요.</string>
    <string name="title_selling_post_required">아직 작성하지 않은 항목이 있어요.</string>
    <string name="title_selling_post">판매글 올리기</string>
    <string name="title_bid_cancel">입찰을 취소하시겠어요?</string>
    <string name="title_bid_delete_warning">판매글 삭제가 불가능합니다.</string>

    <string name="category_home">홈</string>
    <string name="category_search">검색</string>
    <string name="category_my_trade">내 거래</string>
    <string name="category_my_page">MY</string>
    <string name="category_ending_soon">Ending Soon</string>
    <string name="category_latest_order">최신순</string>
    <string name="category_promotion">프로모션</string>
    <string name="category_popular_item">인기매물순</string>
    <string name="category_popular">인기순</string>
    <string name="category_deadline_imminent">마감임박</string>
    <string name="category_chatting">채팅</string>


    <string name="content_bidding_price_hint">가격을 입력해주세요.</string>
    <string name="content_now">현재</string>
    <string name="content_no_keyword">최근 검색 내역이 없습니다.</string>
    <string name="content_input_keyword">검색어를 입력해주세요.</string>
    <string name="content_all_delete">모두 지우기</string>
    <string name="content_no_search_result">에 대한\n검색 결과가 없습니다.</string>
    <string name="content_parcel">택배거래</string>
    <string name="content_direct_purchase">직거래</string>
    <string name="content_min_date">최소기간</string>
    <string name="content_max_date">최대기간</string>
    <string name="content_filter_clear">필터초기화</string>
    <string name="content_min_price">최소금액</string>
    <string name="content_max_price">최대금액</string>
    <string name="content_apply">적용하기</string>
    <string name="content_month">개월</string>
    <string name="content_won">원</string>
    <string name="content_space_won">원을</string>
    <string name="content_recent_bidding_user">최근 입찰자</string>
    <string name="content_immediate_purchase">즉시구매하기</string>
    <string name="content_bidding">입찰하기</string>
    <string name="content_current_price">현재가인&#160;</string>
    <string name="content_must_over_bidding">원 이상 비딩해야합니다.</string>
    <string name="content_won_at">원에</string>
    <string name="content_do_immediate_purchase">즉시구매 할게요.</string>
    <string name="content_do_immediate_purchase_for_chat">즉시구매 채팅 보내기</string>
    <string name="content_cancel">취소</string>
    <string name="content_check_price">가격을 다시 한 번 확인해주세요.</string>
    <string name="content_do_bidding">입찰합니다.</string>
    <string name="content_do_bidding_complete">입찰 완료했습니다.</string>
    <string name="content_after_bidding_alarm">최종 입찰되면 알림이 가거나, 알람을 확인해주세요!</string>
    <string name="content_okay">확인</string>
    <string name="content_opening">비딩으로\n새로운 중고거래\n시장을 열다</string>
    <string name="content_reservation">예약중</string>
    <string name="content_report">신고</string>
    <string name="content_close">닫기</string>
    <string name="content_modify">수정하기</string>
    <string name="content_do_delete">삭제하기</string>
    <string name="content_delete">삭제</string>
    <string name="content_delete_detail_explanation">입찰된 게시글을 삭제하면 다른 유저들이\n당황할 수 있어요.</string>
    <string name="content_selling">판매중</string>
    <string name="content_selling_status">판매 상태는 실제 거래 이후, 채팅창에서 바꿀 수 있어요.</string>
    <string name="content_selling_post_temporary">이어서 작성하시겠어요?</string>
    <string name="content_selling_post_continue">이어서 등록</string>
    <string name="content_selling_post_new">새로 등록</string>
    <string name="content_selling_post_required">제목, 카테고리, 가격, 마감 날짜 및 시간, 내용은\n필수적으로 작성해주세요.</string>
    <string name="content_selling_post_title_hint">글 제목</string>
    <string name="content_selling_post_bidding_start_price_hint">비딩 시작가</string>
    <string name="content_selling_post_bidding_immediate_price_hint">즉시 구매가</string>
    <string name="content_selling_post_bidding_ending_date_hint">경매 마감 날짜</string>
    <string name="content_selling_post_bidding_ending_time_hint">경매 마감 시간</string>
    <string name="content_selling_post_registration">판매글 등록</string>
    <string name="content_selling_post_content_hint">경매에 올릴 게시글 내용을 10자 이상 작성해주세요.\n(가품 및 판매금지품목은 게시가 제한될 수 있습니다.</string>
    <string name="content_category">카테고리</string>
    <string name="content_bid_cancel">입찰 취소</string>
    <string name="content_bid_cancel_warning">취소 과정 도중 시간이 마감되면 취소가 불가능해져요.</string>
    <string name="content_bid_cancel_do">입찰 취소하기</string>
    <string name="content_return_previous_display">이전 화면으로 돌아가기</string>
    <string name="content_bidding_delete_warning">이 판매글은 현재 입찰이 진행되어\n삭제가 불가능해요.</string>
    <string name="content_selling_complete">판매완료</string>
    <string name="content_merchandise_no_list">상품이 없습니다.</string>
    <string name="content_selling_cancel">판매취소</string>
    <string name="content_chatting_hint">메세지를 입력해주세요.</string>

    <string-array name="category_detail_merchandise">
        <item>Ending Soon</item>
        <item>최신순</item>
    </string-array>

    <string-array name="category_home_item">
        <item>디지털</item>
        <item>아이폰</item>
        <item>갤럭시</item>
        <item>기타폰</item>
        <item>스마트워치</item>
        <item>노트북·PC</item>
        <item>테블릿</item>
        <item>티비·모니터</item>
        <item>게임</item>
        <item>음향기기</item>
        <item>카메라</item>
        <item>드론</item>
        <item>기타</item>
    </string-array>

    <string-array name="category_my_trade">
        <item>판매 내역</item>
        <item>구매 내역</item>
    </string-array>

    <string-array name="category_number_picker_day">
        <item>오전</item>
        <item>오후</item>
    </string-array>

    <string-array name="category_number_picker_year">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
    </string-array>

    <string-array name="category_number_picker_one_to_thirty_one">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="category_number_picker_zero_to_twelve">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="category_number_picker_one_to_twelve">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="category_number_zero_to_fifty_10">
        <item>00</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <string-array name="category_sign_out_reason">
        <item>기록 삭제 목적</item>
        <item>이용이 불편하고 오류가 많아서</item>
        <item>신뢰도가 떨어져서</item>
        <item>찾는 상품이 없어서</item>
        <item>사용자들이 불친절해서</item>
        <item>타 플랫폼을 더 사용해서</item>
        <item>콘텐츠 불만</item>
        <item>사용빈도가 낮아서</item>
        <item>기타</item>
    </string-array>

</resources>