<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/chattingChannelListFragment"
        android:icon="@drawable/sc_home_bottom_chatting"
        android:title="@string/category_chatting"
        app:showAsAction="always" />
    <item
        android:id="@+id/searchKeywordFragment"
        android:icon="@drawable/sc_home_bottom_search"
        android:title="@string/category_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/sc_home_bottom_home"
        android:title="@string/category_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/myTradeFragment"
        android:icon="@drawable/sc_home_bottom_trade"
        android:title="@string/category_my_trade"
        app:showAsAction="always" />

    <item
        android:id="@+id/myPageFragment"
        android:icon="@drawable/sc_home_bottom_user"
        android:title="@string/category_my_page"
        app:showAsAction="always" />

</menu>