<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_sort_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="@font/notosans_kr_medium"
        android:includeFontPadding="false"
        android:text="@string/category_popular"
        android:textColor="@color/nobel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sort_deadline_imminent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="@font/notosans_kr_medium"
        android:includeFontPadding="false"
        android:text="@string/category_deadline_imminent"
        android:textColor="@color/nobel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_popular" />

    <TextView
        android:id="@+id/tv_sort_latest_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="@font/notosans_kr_medium"
        android:includeFontPadding="false"
        android:text="@string/category_latest_order"
        android:textColor="@color/nobel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_deadline_imminent" />


</androidx.constraintlayout.widget.ConstraintLayout>