<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_temporary_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/title_selling_post_temporary"
            android:textColor="@color/charcoal"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_temporary_post_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/content_selling_post_temporary"
            android:textColor="@color/nobel"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_temporary_post_title" />

        <android.widget.Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_rect_transparent_persian_blue_radius4_stroke0"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="9dp"
            android:text="@string/content_selling_post_continue"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_temporary_post_content" />

        <android.widget.Button
            android:id="@+id/btn_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_rect_transparent_white_smoke_radius4_stroke0"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="9dp"
            android:text="@string/content_selling_post_new"
            android:textColor="@color/nobel"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_continue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>