<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_delete_board_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/title_dialog_delete_board"
            android:textColor="@color/charcoal"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_delete_detail_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/notosans_kr_medium"
            android:gravity="center"
            android:visibility="gone"
            android:includeFontPadding="false"
            android:text="@string/content_delete_detail_explanation"
            android:textColor="@color/nobel"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_delete_board_title" />


        <android.widget.Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_rect_transparent_red_orange_radius4_stroke0"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="9dp"
            android:text="@string/content_delete"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_delete_detail_explanation" />

        <android.widget.Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_rect_transparent_white_smoke_radius4_stroke0"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="9dp"
            android:text="@string/content_cancel"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/nobel"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>