<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_merchandise_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_bidding_complete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:id="@+id/tv_merchandise_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/notosans_kr_bold"
            android:includeFontPadding="false"
            android:text="300,000"
            android:textColor="@color/nero"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/tv_merchandise_price_won"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_merchandise_img" />

        <TextView
            android:id="@+id/tv_merchandise_price_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/content_space_won"
            android:textColor="@color/charcoal"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_merchandise_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_merchandise_price"
            app:layout_constraintTop_toTopOf="@id/tv_merchandise_price" />

        <TextView
            android:id="@+id/tv_bidding_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/content_do_bidding_complete"
            android:textColor="@color/charcoal"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_merchandise_price_won"
            app:layout_constraintStart_toStartOf="@+id/tv_merchandise_price"
            app:layout_constraintTop_toBottomOf="@id/tv_merchandise_price" />

        <TextView
            android:id="@+id/tv_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/content_after_bidding_alarm"
            android:textColor="@color/nobel"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bidding_complete" />


        <LinearLayout
            android:id="@+id/ly_bidding_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.widget.Button
                android:id="@+id/btn_bid_cancle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_rect_transparent_white_smoke_radius4_stroke0"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:minHeight="0dp"
                android:paddingTop="10dp"
                android:paddingBottom="9dp"
                android:text="@string/content_bid_cancel"
                android:textColor="@color/nobel"
                android:textSize="16sp" />

            <android.widget.Button
                android:id="@+id/btn_okay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:background="@drawable/bg_rect_transparent_persian_blue_radius4_stroke0"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:minHeight="0dp"
                android:paddingTop="10dp"
                android:paddingBottom="9dp"
                android:text="@string/content_okay"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>