<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:background="@color/transparent">

        <RadioGroup
            android:id="@+id/rg_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rect_transparent_white_radius4_strok0"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_selling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@drawable/sc_btn_radio"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:padding="16dp"
                android:text="@string/content_selling"
                android:textColor="@color/charcoal"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/whisper" />

            <RadioButton
                android:id="@+id/rb_reservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@drawable/sc_btn_radio"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:padding="16dp"
                android:text="@string/content_reservation"
                android:textColor="@color/charcoal"
                android:textSize="14sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/whisper" />

            <RadioButton
                android:id="@+id/rbselling_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@drawable/sc_btn_radio"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:padding="16dp"
                android:text="@string/content_selling_complete"
                android:textColor="@color/charcoal"
                android:textSize="14sp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>